# slang-gen-ninja

./: .gitignore  CMakeLists.txt  flake.nix
src/: main.cpp  pch.h
